# GlassHive

./: .gitignore  README.md
contracts/: workers_projects_phase1.openapi.yaml
docs/: 01_Vision_Requirements_and_Terminology.md  02_Architecture_and_Components.md  03_Bootstrap_Auth_and_Identity_Projection.md  04_MCP_Publication_and_Client_Compatibility.md  05_QA_Quick_Power_Playbook.md  06_References.md  07_Minimal_Unified_Operator_UI.md  08_Repository_Structure_and_Publication_Boundaries.md  09_Dynamic_MCP_Projection_and_Bidirectional_Availability.md  (+2 more)
frontends/glass-drive-ui/: README.md  pyproject.toml
frontends/glass-drive-ui/src/glass_drive_ui/: __init__.py  prompt_template.py  runtime_client.py  server.py  signed_links.py
frontends/glass-drive-ui/src/glass_drive_ui/static/: app.js  desktop.html  desktop.js  index.html  styles.css  watch.html  watch.js
frontends/glass-drive-ui/tests/: test_prompt_template.py  test_server.py
runtime_phase1/: README.md  pyproject.toml
runtime_phase1/src/workers_projects_runtime/: api.py  auth.py  bootstrap.py  deliverables.py  docker_sandbox.py  failure_classification.py  mcp_server.py  models.py  openclaw_runtime.py  operator_urls.py  profile_runtime.py  run_evidence.py  runtime.py  runtime_env.py  runtime_identity.py  runtime_requirements.py  service.py  signed_links.py  store.py  terminal_takeover.py
runtime_phase1/tests/: conftest.py  test_api.py  test_bootstrap.py  test_cli_live.py  test_docker_sandbox.py  test_mcp_server.py  test_models.py  test_openclaw_live.py  test_profile_runtime.py  test_run_evidence.py
(+11 files in other folders)
