[project]
name = "glass-drive-ui"
version = "0.1.0"
description = "Minimal unified operator UI for Glass Hive"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
